@@ -237,10 +237,10 @@ class FileDatabaseSelectActivity : SpecialModeActivity(),
 
     private fun fileNoFoundAction(e: FileNotFoundException) {
         val error = getString(R.string.file_not_found_content)
+        Log.e(TAG, error, e)
         coordinatorLayout?.let {
             Snackbar.make(it, error, Snackbar.LENGTH_LONG).asError().show()
         }
-        Log.e(TAG, error, e)
     }
 
     private fun launchPasswordActivity(databaseUri: Uri, keyFile: Uri?) {
