@@ -1,1 +1,2 @@
  * Unlock database by device credentials (PIN/Password/Pattern) #779 #102
+ * Remove default database parameter when the file is no longer accessible #803
