@@ -1,5 +1,6 @@
 KeePassDX(2.9.3)
  * Unlock database by device credentials (PIN/Password/Pattern) #779 #102
+ * Remove default database parameter when the file is no longer accessible #803
 
 KeePassDX(2.9.2)
  * Managing OTP links from QR applications #556
